==> altracio/Arduino-SDI-12/src/SDI12.cpp <==
#include "SDI12.h"                   // Header file for this library
#include "SDI12_boards.h"            //  Include timer information

void SDI12::setPinInterrupts(bool enable)
{
  #if defined (ARDUINO_ARCH_SAMD)
    pinMode(_rxPin, INPUT);
    if (enable) attachInterrupt(digitalPinToInterrupt(_rxPin), handleInterrupt, CHANGE);  // Merely need to attach the interrupt function to the pin
    else detachInterrupt(digitalPinToInterrupt(_rxPin));  // Merely need to detach the interrupt function from the pin

  #elif  defined (__AVR__) && not defined (SDI12_EXTERNAL_PCINT)
    if (enable)
    {
        *digitalPinToPCICR(_rxPin) |= (1<<digitalPinToPCICRbit(_rxPin));  // Enable interrupts on the register with the pin of interest
        *digitalPinToPCMSK(_rxPin) |= (1<<digitalPinToPCMSKbit(_rxPin));  // Enable interrupts on the specific pin of interest
        // The interrupt function is actually attached to the interrupt way down in section 7.5
    }
    else
    {
        *digitalPinToPCMSK(_rxPin) &= ~(1<<digitalPinToPCMSKbit(_rxPin));  // Disable interrupts on the specific pin of interest
        if(!*digitalPinToPCMSK(_rxPin)){  // If there are no other pins on the register left with enabled interrupts, disable the whole register
          *digitalPinToPCICR(_rxPin) &= ~(1<<digitalPinToPCICRbit(_rxPin));
        }
        // We don't detach the function from the interrupt for AVR processors
    }
  #endif
}

void SDI12::setState(SDI12_STATES state){
  switch (state)
  {
    case HOLDING:
    {
      pinMode(_txPinEn, OUTPUT);
      digitalWrite(_txPinEn, HIGH);

      pinMode(_txPin, INPUT);     // Turn off the pull-up resistor
      pinMode(_txPin, OUTPUT);    // Pin mode = output
      digitalWrite(_txPin, LOW);  // Pin state = low - hold the line low

      setPinInterrupts(false);    // Interrupts disabled on data pin
      break;
    }
    case TRANSMITTING:
    {
      pinMode(_txPinEn, OUTPUT);
      digitalWrite(_txPinEn, HIGH);

      pinMode(_txPin, INPUT);     // Turn off the pull-up resistor
      pinMode(_txPin, OUTPUT);    // Pin mode = output

      setPinInterrupts(false);      // Interrupts disabled on data pin
      break;
    }
    case LISTENING:
    {
      pinMode(_txPinEn, OUTPUT);
      digitalWrite(_txPinEn, LOW); // Turn off the TX output

      digitalWrite(_txPin, LOW);  // Pin state = low
      pinMode(_txPin, INPUT);     // Pin mode = input, pull-up resistor off

      interrupts();                 // Enable general interrupts
      setPinInterrupts(true);       // Enable Rx interrupts on data pin
      rxState = WAITING_FOR_START_BIT;
      break;
    }
    default:  // DISABLED or ENABLED
    {
      pinMode(_txPinEn, OUTPUT);
      digitalWrite(_txPinEn, LOW); // Turn off the TX output

      digitalWrite(_txPin, LOW); // Pin state = low
      pinMode(_txPin, INPUT);    // Pin mode = input, pull-up resistor off

      setPinInterrupts(false);      // Interrupts disabled on data pin
      break;
    }
  }
}

void SDI12::wakeSensors() {
  setState(TRANSMITTING);
  // Universal interrupts can be on while the break and marking happen because
  // timings for break and from the recorder are not critical.
  // Interrupts on the pin are disabled for the entire transmitting state
  digitalWrite(_txPin, HIGH);
  delayMicroseconds(lineBreak_micros);  // Required break of 12 milliseconds
  digitalWrite(_txPin, LOW);
  delayMicroseconds(marking_micros);  // Required marking of 8.33 milliseconds
}

void SDI12::writeChar(uint8_t outChar) {
  uint8_t currentTxBitNum = 0; // first bit is start bit
  uint8_t bitValue = 1; // start bit is HIGH (inverse parity...)

  noInterrupts();  // _ALL_ interrupts disabled so timing can't be shifted

  uint8_t t0 = TCNTX; // start time
  digitalWrite(_txPin, HIGH);  // immediately get going on the start bit
  // this gives us 833µs to calculate parity and position of last high bit
  currentTxBitNum++;

  uint8_t parityBit = parity_even_bit(outChar);  // Calculate the parity bit
  outChar |= (parityBit<<7);  // Add parity bit to the outgoing character

  // Calculate the position of the last bit that is a 0/HIGH (ie, HIGH, not marking)
  // That bit will be the last time-critical bit.  All bits after that can be
  // sent with interrupts enabled.

  uint8_t lastHighBit = 9;  // The position of the last bit that is a 0 (ie, HIGH, not marking)
  uint8_t msbMask = 0x80;  // A mask with all bits at 1
  while (msbMask & outChar) {
    lastHighBit--;
    msbMask >>= 1;
  }

  // Hold the line for the rest of the start bit duration
  while ((uint8_t)(TCNTX - t0) < txBitWidth) {}
  t0 = TCNTX; // advance start time

  // repeat for all data bits until the last bit different from marking
  while (currentTxBitNum++ < lastHighBit) {
    bitValue = outChar & 0x01;  // get next bit in the character to send
    if (bitValue){
      digitalWrite(_txPin, LOW);  // set the pin state to LOW for 1's
    }
    else{
      digitalWrite(_txPin, HIGH);  // set the pin state to HIGH for 0's
    }
    // Hold the line for this bit duration
    while ((uint8_t)(TCNTX - t0) < txBitWidth) {}
    t0 = TCNTX; // advance start time
    outChar = outChar >> 1;  // shift character to expose the following bit
  }

  // Set the line low for the all remaining 1's and the stop bit
  digitalWrite(_txPin, LOW);

  interrupts(); // Re-enable universal interrupts as soon as critical timing is past

  // Hold the line low until the end of the 10th bit
  uint8_t bitTimeRemaining = txBitWidth*(10-lastHighBit);
  while ((uint8_t)(TCNTX - t0) < bitTimeRemaining) {}

}

void SDI12::sendCommand(String &cmd) {
  wakeSensors();             // set state to transmitting and send break/marking
  for (int unsigned i = 0; i < cmd.length(); i++){
    writeChar(cmd[i]);       // write each character
  }
  setState(LISTENING);       // listen for reply
}

void SDI12::sendCommand(const char *cmd) {
  wakeSensors();             // wake up sensors
  for (int unsigned i = 0; i < strlen(cmd); i++){
    writeChar(cmd[i]);      // write each character
  }
  setState(LISTENING);      // listen for reply
}

void SDI12::sendCommand(FlashString cmd) {
  wakeSensors();            // wake up sensors
  for (int unsigned i = 0; i < strlen_P((PGM_P)cmd); i++){
    writeChar((char)pgm_read_byte((const char *)cmd + i));  // write each character
  }
  setState(LISTENING);      // listen for reply
}

void SDI12::sendResponse(String &resp) {
  setState(TRANSMITTING);   // Get ready to send data to the recorder
  digitalWrite(_txPin, LOW);
  delayMicroseconds(marking_micros);  // 8.33 ms marking before response
  for (int unsigned i = 0; i < resp.length(); i++){
    writeChar(resp[i]);     // write each character
  }
  setState(LISTENING);      // return to listening state
}

void SDI12::sendResponse(const char *resp) {
  setState(TRANSMITTING);   // Get ready to send data to the recorder
  digitalWrite(_txPin, LOW);
  delayMicroseconds(marking_micros);  // 8.33 ms marking before response
  for (int unsigned i = 0; i < strlen(resp); i++){
    writeChar(resp[i]);     // write each character
  }
  setState(LISTENING);      // return to listening state
}

void SDI12::sendResponse(FlashString resp) {
  setState(TRANSMITTING);   // Get ready to send data to the recorder
  digitalWrite(_txPin, LOW);
  delayMicroseconds(marking_micros);  // 8.33 ms marking before response
  for (int unsigned i = 0; i < strlen_P((PGM_P)resp); i++){
    writeChar((char)pgm_read_byte((const char *)resp + i));  // write each character
  }
  setState(LISTENING);      // return to listening state
}

void SDI12::receiveISR()
{
  uint8_t thisBitTCNT = TCNTX;               // time of this data transition (plus ISR latency)
  uint8_t pinLevel = digitalRead(_rxPin);  // current RX data level

  // Check if we're ready for a start bit, and if this could possibly be it
  // Otherwise, just ignore the interrupt and exit
  if (rxState == WAITING_FOR_START_BIT) {
     // If it is low it's not a start bit, exit
     // Inverse logic start bit = HIGH
    if (pinLevel == LOW) {
      return;
    }
    // If it is HIGH, this should be a start bit
    // Thus set the rxStat to 0, create an empty character, and a new mask with a 1 in the lowest place
    startChar();
  }

  // if the character is incomplete, and this is not a start bit,
  // then this change is from a data, parity, or stop bit
  else {

    // check how many bit times have passed since the last change
    // the rxWindowWidth is just a fudge factor
    uint16_t rxBits = bitTimes(thisBitTCNT - prevBitTCNT);
    // Serial.println(rxBits);
    // calculate how many *data+parity* bits should be left
    // We know the start bit is past and are ignoring the stop bit (which will be LOW/1)
    // We have to treat the parity bit as a data bit because we don't know its state
    uint8_t bitsLeft = 9 - rxState;
    // note that a new character *may* have started if more bits have been
    // received than should be left.
    // This will also happen if the parity bit is 1 or the last bit(s) of the
    // character and the parity bit are all 1's.
    bool nextCharStarted = (rxBits > bitsLeft);

    // check how many data+parity bits have been sent in this frame
    // If the total number of bits in this frame is more than the number of data+parity
    // bits remaining in the character, then the number of data+parity bits is equal
    // to the number of bits remaining for the character and partiy.  If the total
    // number of bits in this frame is less than the number of data bits left
    // for the character and parity, then the number of data+parity bits received
    // in this frame is equal to the total number of bits received in this frame.
    // translation:
    //    if nextCharStarted then bitsThisFrame = bitsLeft
    //                       else bitsThisFrame = rxBits
    uint8_t bitsThisFrame = nextCharStarted ? bitsLeft : rxBits;
    // Tick up the rxState by that many bits
    rxState += bitsThisFrame;

    // Set all the bits received between the last change and this change
    // If the current state is HIGH (and it just became so), then all bits between
    // the last change and now must have been LOW.
    if (pinLevel == HIGH) {
      // back fill previous bits with 1's (inverse logic - LOW = 1)
      while (bitsThisFrame-- > 0) {
        rxValue |= rxMask;  // Add a 1 to the LSB/right-most place
        rxMask   = rxMask << 1;  // Shift the 1 in the mask up by one position
      }
      rxMask = rxMask << 1;  // Shift the 1 in the mask up by one more position
    }
    // If the current state is LOW (and it just became so), then this bit is LOW
    // but all bits between the last change and now must have been HIGH
    else { // pinLevel==LOW
      // previous bits were 0's so only this bit is a 1 (inverse logic - LOW = 1)
      rxMask   = rxMask << (bitsThisFrame-1);  // Shift the 1 in the mask up by the number of bits past
      rxValue |= rxMask;  //  Add that shifted one to the character being created
    }

    // If this was the 8th or more bit then the character and parity are complete.
    if (rxState > 7) {
      rxValue &= 0x7F;  // 0b01111111, Throw away the parity bit
      charToBuffer(rxValue);  // Put the finished character into the buffer


      // if this is LOW, or we haven't exceeded the number of bits in a
      // character (but have gotten all the data bits) then this should be a
      // stop bit and we can start looking for a new start bit.
      if ((pinLevel == LOW) || !nextCharStarted) {
        rxState = WAITING_FOR_START_BIT;  // DISABLE STOP BIT TIMER
      } else {
        // If we just switched to HIGH, or we've exceeded the total number of
        // bits in a character, then the character must have ended with 1's/LOW,
        // and this new 0/HIGH is actually the start bit of the next character.
        startChar();
      }
    }

  }
  prevBitTCNT = thisBitTCNT;  // remember time stamp of this change!
}
